--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@
     box-sizing: border-box;
 }
 
-#naruto, #piece, #slayer, #jujutsu, #dragon{
+#naruto,
+#piece,
+#slayer,
+#jujutsu,
+#dragon {
     width: 261px;
     height: 100vh;
 }
@@ -23,11 +27,11 @@
     position: absolute;
     z-index: 1;
     width: 100%;
-    opacity: 73%; 
+    opacity: 73%;
     width: 650px;
     height: 458px;
-    background-color:#D9D9D9; 
-    border-radius: 30px; 
+    background-color: #D9D9D9;
+    border-radius: 30px;
     padding: 65px 20px;
     position: fixed;
     top: 50%;
@@ -54,16 +58,16 @@
     font-size: 18px;
     border: none;
     border-radius: 12px;
-    background-color: #FFFCFC; 
+    background-color: #FFFCFC;
     cursor: pointer;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     justify-content: end;
 }
 
-#idPergunta{
+#idQuestion {
     color: black;
     display: flex;
     align-items: center;
@@ -74,11 +78,11 @@
     width: 21px;
     height: 20px;
     border-radius: 50%;
-    position: absolute; 
-    z-index: 2; 
+    position: absolute;
+    z-index: 2;
     background-color: #40F618;
-    top: 120px; 
-    left: 870px; 
+    top: 120px;
+    left: 870px;
 
 }
 
@@ -86,20 +90,20 @@
     width: 21px;
     height: 20px;
     border-radius: 50%;
-    position: absolute; 
-    z-index: 2; 
+    position: absolute;
+    z-index: 2;
     background-color: #F6A818;
-    top: 120px; 
-    left: 900px; 
+    top: 120px;
+    left: 900px;
 }
 
 .red {
     width: 21px;
     height: 20px;
     border-radius: 50%;
-    position: absolute; 
+    position: absolute;
     z-index: 2;
     background-color: #F61818;
-    top: 120px; 
-    left: 930px; 
+    top: 120px;
+    left: 930px;
 }
