--- a/style.css
+++ b/style.css
@@ -107,3 +107,13 @@
     top: 30px;
     left: 590px;
 }
+
+/* responsividade */
+@media screen and (max-width: 600px){
+    .body{
+        font-size: 14px;
+        padding: 10px;
+    }
+}
+    
+
