--- a/style.css
+++ b/style.css
@@ -123,6 +123,94 @@
     z-index: 1000;
 }
 
+.personagem-container {
+    position: absolute;
+    width: fit-content;
+    top: 50%; /* Ajuste conforme necessário */
+    left: 50%; /* Ajuste conforme necessário */
+    transform: translate(-50%, -50%);
+    z-index: 1000; /* Certifique-se de que o personagem esteja na frente */
+}
+
+#muzan {
+    position: absolute;
+    width: 300px;
+    left: -150px;
+    bottom: -80px;
+    transition: left 2s ease-in-out;
+    z-index: 1001; 
+}/* Garanta que a imagem do personagem esteja na frente da faixa */
+
+
+.faixa {
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 850px;
+    height: 150px;
+    position: absolute;
+    left: -200px;
+    bottom: -80px;
+    transition: left 2s ease-in-out;
+    z-index: 1000; /* Faixa logo atrás do personagem */
+}
+
+#kaidou {
+    position: absolute;
+    width: 300px;
+    left: 500px;
+    bottom: 80px;
+    transition: left 2s ease-in-out;
+    z-index: 1001;
+}/* Garanta que a imagem do personagem esteja na frente da faixa */
+    
+.faixa_kaidou{
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 850px;
+    height: 250px;
+    position: absolute;
+    left: 500px;
+    bottom: 80px;
+    transition: left 2s ease-in-out;
+    z-index: 1000; /* Faixa logo atrás do personagem */
+}
+
+#sakuna {
+    position: absolute;
+    width: 300px;
+    left: 500px;
+    bottom: 180px;
+    transition: left 2s ease-in-out;
+    z-index: 1001;
+}/* Garanta que a imagem do personagem esteja na frente da faixa */
+
+.faixa_sakuna{
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 850px;
+    height: 150px;
+    position: absolute;
+    left: 500px;
+    bottom: 180px;
+    transition: left 2s ease-in-out;
+    z-index: 1000; /* Faixa logo atrás do personagem */
+}
+    
+
+.show-muzan #muzan {
+    left: 0;
+}
+
+.show-muzan .faixa {
+    left: -500px;
+}
+
+.hide-muzan #muzan {
+    left: 1500px;
+}
+
+.hide-muzan .faixa {
+    left: 3000px;
+}
+
+
 /* responsividade */
 @media screen and (max-width: 600px){
     .body{
